# dolfinx.sycl

./: .clang-format  .gitignore  CMakeLists.txt  README.md  assemble.hpp  assemble_impl.cpp  assemble_impl.hpp  main.cpp  problem.ufl  solve.cpp  utils.hpp
.github/workflows/: ci.yml
docker/: Dockerfile
singularity/: dolfinx_sycl.def
src/: CsrMatrix.hpp  algorithms.hpp  assemble.hpp  assemble_impl.cpp  assemble_impl.hpp  assemble_vector.hpp  dolfinx_sycl.hpp  kernel.hpp  la.cpp  la.hpp  main.cpp  memory.cpp  memory.hpp  problem.c  problem.h  solve.cpp  test_csr_matrix.cpp  utils.hpp
src/benchmark/: CMakeLists.txt  main.cpp
